# neuromod25

./: .gitignore  hello.py  pyproject.toml
artifacts/: fixed_point_analysis_methods.docx
config/: fpf.yaml  test.yaml  train.yaml
config/model/: base_rnn.yaml
config/task/: base.yaml  wholepop.yaml
fpf/: FixedPointFinderBase.py  FixedPointFinderTorch.py
logs/: 250216_train.out  250217_fpf.out  250217_train.out  250218_fpf.out  250218_test.out  250218_train.out
nm/: model.py  tasks.py
notebooks/: examine_fps.ipynb  scrap.ipynb  viz_tasks.ipynb
outputs/2025-01-27/18-14-22/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-27/18-51-03/.hydra/: hydra.yaml
outputs/2025-01-27/18-51-26/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-27/18-52-26/.hydra/: hydra.yaml
outputs/2025-01-27/18-53-28/.hydra/: hydra.yaml
outputs/2025-01-27/18-55-19/.hydra/: hydra.yaml
outputs/2025-01-27/18-55-38/.hydra/: hydra.yaml
outputs/2025-01-27/19-47-36/.hydra/: hydra.yaml
outputs/2025-01-27/19-48-10/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-27/19-48-26/.hydra/: hydra.yaml
outputs/2025-01-27/19-53-02/.hydra/: hydra.yaml
results/models/2025-02-03/22-05-14/: epoch_losses.npy  model_weights.pth
results/models/2025-02-03/22-10-08/: epoch_losses.npy  model_weights.pth
results/models/2025-02-03/22-58-01/: epoch_losses.npy  model_weights.pth
results/models/2025-02-03/23-13-17/: epoch_losses.npy  model_weights.pth
results/models/2025-02-03/23-26-54/: epoch_losses.npy  model_weights.pth
scripts/: find_fixed_points.py  test.py  train.py
(+73 files in other folders)
